2005-12-28  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_4_0

2005-12-24  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/fact.cpp :
	* lib/identifier.cpp :
	* lib/identifier.h :
	* lib/mapper.cpp :
	* lib/symtab.cpp :

	  - Cleanup of identifier macros.

	* samples/ground.vlp :
	* samples/ground.vla :

	  - A simple program to test grounding mechanism.

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Constraint rule grounding is now performed in compute_evaluate()
	    and compute_generate() instead of when they come in.

	  - Added generate_rule() and evaluate_rule().

2005-12-16  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Removed the unused version of replace() that takes a single entity
	    and single variable.

2005-12-15  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :

	  - Now uses the rule constructor functions instead of using numlists.

	* lib/smwrap.cpp :
	* lib/smwrap.h :

	  - Added rule constructor functions.

2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Cleanup by moving the different rule generators to their own
	    functions.

	* lib/Makefile.in :

	  - Added forgotten action for mapper rule.

2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_3_1

	* Merged vlad-1_2_3

	* lib/polbase.h :

	  - Fixed rule dumping format so that no rule has more than one fact
	    in its head.

2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/polbase.cpp :

	  - Update rules with variables that are not declared in the var
	    list will be automatically grounded to any matching entities
	    of the same type.

	* lib/fact.cpp :

	  - Fixed incorrect checking of verify_memb() and verify_subst() which
	    used to allow non-ground facts like memb(SS, S) or subst(A, AG).
